--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.2.1",
     "@mapbox/search-js-react": "^1.5.0",
     "@paypal/react-paypal-js": "^8.9.2",
     "@radix-ui/react-avatar": "^1.1.11",
@@ -32,6 +33,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.24",
+    "immer": "^11.0.1",
     "lucide-react": "^0.553.0",
     "mapbox-gl": "^3.16.0",
     "react": "^19.2.0",
@@ -40,7 +42,9 @@
     "react-icons": "^5.5.0",
     "react-map-gl": "^7.1.7",
     "react-router": "^7.9.5",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.7",
+    "sweetalert2": "^11.26.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
